<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:layout="http://schemas.android.com/apk/res-auto"
    android:layout_width="280dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginBottom="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="10dp"
    >

    <!--<android.support.v7.widget.CardView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginBottom="10dp"-->
        <!--android:layout_marginLeft="10dp"-->
        <!--android:layout_marginRight="10dp"-->
        <!--android:layout_marginTop="10dp"-->
        <!--card_view:cardCornerRadius="4dp">-->


        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:id="@+id/rbgSorting">

            <com.intechdev.IpasKala.component.RadioButtonAppWork
                android:id="@+id/rbVeryView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="4dp"
                android:layout_weight="1"
                android:layoutDirection="rtl"
                android:text="@string/porbazdid"
                android:textSize="@dimen/font_size_2"
                app:theme="@style/MyRadioButtonStyle"
                />

            <com.intechdev.IpasKala.component.RadioButtonAppWork
                android:id="@+id/rbVerySale"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:layoutDirection="rtl"
                android:text="@string/porforush"
                android:textSize="@dimen/font_size_2"
                app:theme="@style/MyRadioButtonStyle"
                android:layout_marginTop="4dp"/>

            <com.intechdev.IpasKala.component.RadioButtonAppWork
                android:id="@+id/rbSpecialOffer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:layoutDirection="rtl"
                android:text="@string/pishnahadvizhe"
                android:textSize="@dimen/font_size_2"
                app:theme="@style/MyRadioButtonStyle"
                android:layout_marginTop="4dp"/>

            <com.intechdev.IpasKala.component.RadioButtonAppWork
                android:id="@+id/rbPriceTooLow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:layoutDirection="rtl"
                android:text="@string/gheymatziyadbekam"
                android:textSize="@dimen/font_size_2"
                app:theme="@style/MyRadioButtonStyle"
                android:layout_marginTop="4dp"/>

            <com.intechdev.IpasKala.component.RadioButtonAppWork
                android:id="@+id/rbPriceLowToHigh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:layoutDirection="rtl"
                android:text="@string/gheymatkambezyad"
                android:textSize="@dimen/font_size_2"
                app:theme="@style/MyRadioButtonStyle"
                android:layout_marginTop="4dp"/>

            <com.intechdev.IpasKala.component.RadioButtonAppWork
                android:id="@+id/rbNew"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:layoutDirection="rtl"
                android:text="@string/jadidtarinha"
                android:textSize="@dimen/font_size_2"
                app:theme="@style/MyRadioButtonStyle"
                android:layout_marginTop="4dp"/>
        </RadioGroup>

    <!--</android.support.v7.widget.CardView>-->
</LinearLayout>